# py-Slingshot

./: .gitignore  AUDIT.md  DISCOVERY.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
data/: Py_W.csv  Py_curve_1.csv  Py_curve_2.csv  Py_pt.csv  R_W.csv  R_curve_1.csv  R_curve_2.csv  R_curve_3.csv  R_pt.csv  fixture_coords.csv  fixture_labels.csv  manifest.yaml
examples/: compare_R_vs_Python.ipynb  evolution.ipynb  function_by_function_R_parity.ipynb  tutorial_y_branch.ipynb  visualization_R_parity.ipynb
pyslingshot/: __init__.py  core.py  plotting.py
tests/: _run_candidate.py  py_plot_driver.py  r_plot_driver.R  r_reference_driver.R  test_exact_match.py  test_smoke.py
