[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyslingshot-bio"
version = "0.1.0"
description = "Pure-Python port of slingshot — cell-lineage and pseudotime inference (Street et al. BMC Genomics 2018)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zehua Zeng", email = "starlitnightly@163.com" }]
keywords = ["single-cell", "scRNA-seq", "pseudotime", "lineage", "trajectory", "slingshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "statsmodels>=0.14",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
plot = ["ggplot2-python>=4.0"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/omicverse/py-Slingshot"
Repository = "https://github.com/omicverse/py-Slingshot"
"Upstream R package" = "https://github.com/kstreet13/slingshot"

[tool.setuptools.packages.find]
include = ["pyslingshot*"]
exclude = ["tests*", "examples*", "slingshot-ref*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
